test/spec_vectors/memory/fail/module_21.wat
(module (memory 2147483648))